--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   font-family: "Rancho", cursive;
   font-style: normal;
 }
-.raleway {
+body {
   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
